Bug #1254: vertical alignment in search forms

--- a/coop_local/static/css/main.less
+++ b/coop_local/static/css/main.less
@@ -428,7 +428,7 @@ hr {
     }
 
     .item {
-        margin-top: 10px;
+        margin-top: 20px;
 
         &:first-child {
             margin-top: 0;
@@ -464,6 +464,18 @@ hr {
         .item {
             margin-top: 21px;
         }
+    }
+
+    #interim {
+        margin-top: 43px;
+    }
+
+    #radius {
+        margin-bottom: 12px;
+    }
+
+    button {
+        margin-top: 10px;
     }
 }
 
